# xmpp-bridge-py

./: .gitignore  README.md  flake.nix  pyproject.toml
xmpp_bridge_py/: main.py
