[tool.poetry]
name = "xmpp-bridge-py"
version = "0.1.0"
description = "Connect command-line programs to XMPP"
authors = ["Jasper Chan <jasperchan515@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# Needed for python 3.12 compat, PR has been dead since end of 2023
xmpppy = { git = "https://github.com/xmpppy/xmpppy.git", branch = "refs/pull/70/head"}
dnspython = "^2.4.2"

[tool.poetry.scripts]
xmpp-bridge = "xmpp_bridge_py.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
